[package]
name = "near-hat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = "1.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

near-hat = { path = "../near-hat" }
