[package]
name = "near-hat-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
clap = { version = "4.4", features = ["derive", "env"] }
ctrlc = "3.2"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tokio = "1.28"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

near-hat = { path = "../near-hat" }
near-primitives = "0.17"
near-workspaces = { git = "https://github.com/near/near-workspaces-rs.git", rev = "142893b6e501c5b638b20582d81482e173d4499d" }
