[package]
name = "near-hat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
async-trait = "0.1"
bollard = "0.13"
futures = "0.3"
home = "0.5"
once_cell = "1.18"
rand = "0.8"
serde = "1.0"
serde_json = "1.0"
tempfile = "3.8"
testcontainers = { version = "0.15", features = ["experimental"] }
toml = "0.8.1"
tracing = "0.1"

near-crypto = "0.17"
near-lake-framework = { git = "https://github.com/near/near-lake-framework-rs.git", branch = "main" }
near-lake-primitives = { git = "https://github.com/near/near-lake-framework-rs.git", branch = "main" }
near-primitives = "0.17"
near-token = "0.2.0"
near-workspaces = "0.9.0"
